--- a/figuretable/regression_matching.tex
+++ b/figuretable/regression_matching.tex
@@ -7,49 +7,49 @@
 \\[-1.8ex] & \multicolumn{5}{c}{1(match)} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5)\\ 
 \hline \\[-1.8ex] 
- log(liner$_{b}$ *liner$_{t}$+1) & $-$0.0002 &  & $-$0.019$^{*}$ & $-$0.033$^{***}$ & $-$0.004$^{***}$ \\ 
-  & (0.006) &  & (0.011) & (0.011) & (0.001) \\ 
+ log(liner$_{b}$ *liner$_{t}$+1) & $-$0.002 &  & $-$0.014 & $-$0.031$^{***}$ & $-$0.004$^{***}$ \\ 
+  & (0.006) &  & (0.010) & (0.011) & (0.001) \\ 
   & & & & & \\ 
- log(tramper$_{b}$ *tramper$_{t}$+1) & 0.003 &  & 0.010$^{**}$ & 0.017$^{***}$ & 0.002$^{***}$ \\ 
-  & (0.002) &  & (0.004) & (0.004) & (0.001) \\ 
+ log(tramper$_{b}$ *tramper$_{t}$+1) & 0.005$^{*}$ &  & 0.002 & 0.017$^{***}$ & 0.002$^{***}$ \\ 
+  & (0.003) &  & (0.005) & (0.006) & (0.001) \\ 
   & & & & & \\ 
- log(special$_{b}$ *special$_{t}$+1) & $-$0.010$^{**}$ &  & $-$0.004 & $-$0.018$^{***}$ & $-$0.002$^{***}$ \\ 
+ log(special$_{b}$ *special$_{t}$+1) & $-$0.009$^{**}$ &  & $-$0.003 & $-$0.016$^{**}$ & $-$0.002$^{***}$ \\ 
   & (0.004) &  & (0.006) & (0.006) & (0.001) \\ 
   & & & & & \\ 
- log(tanker$_{b}$ *tanker$_{t}$+1) & $-$0.004 &  & $-$0.014$^{**}$ & $-$0.019$^{***}$ & $-$0.002$^{***}$ \\ 
-  & (0.004) &  & (0.006) & (0.006) & (0.001) \\ 
+ log(tanker$_{b}$ *tanker$_{t}$+1) & $-$0.001 &  & $-$0.016$^{**}$ & $-$0.023$^{***}$ & $-$0.003$^{***}$ \\ 
+  & (0.004) &  & (0.006) & (0.007) & (0.001) \\ 
   & & & & & \\ 
- log(total$_{b}$ *total$_{t}$+1) & $-$0.005 &  & $-$0.018$^{***}$ & 0.017$^{***}$ & 0.002$^{***}$ \\ 
-  & (0.003) &  & (0.005) & (0.005) & (0.001) \\ 
+ log(total$_{b}$ *total$_{t}$+1) & $-$0.026$^{*}$ &  & $-$0.007 & 0.026 & 0.003 \\ 
+  & (0.014) &  & (0.018) & (0.019) & (0.002) \\ 
   & & & & & \\ 
- bank coverage similarity ratio &  & 1.057$^{**}$ & 2.003$^{***}$ & 1.009$^{*}$ & 0.134$^{*}$ \\ 
-  &  & (0.527) & (0.562) & (0.599) & (0.076) \\ 
+ bank coverage similarity ratio &  & 1.687$^{***}$ & 2.141$^{***}$ & 0.912 & 0.119 \\ 
+  &  & (0.529) & (0.570) & (0.611) & (0.075) \\ 
   & & & & & \\ 
- log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.087 & 0.550$^{***}$ & $-$0.119 & $-$0.013 \\ 
-  &  & (0.107) & (0.184) & (0.195) & (0.024) \\ 
+ log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.543$^{***}$ & 0.371 & $-$0.244 & $-$0.035 \\ 
+  &  & (0.149) & (0.228) & (0.240) & (0.029) \\ 
   & & & & & \\ 
- log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.284 & 1.866$^{**}$ & 2.574$^{***}$ & 0.315$^{***}$ \\ 
-  &  & (0.501) & (0.818) & (0.888) & (0.111) \\ 
+ log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.304 & 1.144 & 2.111$^{***}$ & 0.256$^{***}$ \\ 
+  &  & (0.459) & (0.759) & (0.808) & (0.099) \\ 
   & & & & & \\ 
- log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$1.060$^{*}$ & $-$0.439 & $-$0.090 & 0.0001 \\ 
-  &  & (0.554) & (0.672) & (0.701) & (0.079) \\ 
+ log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$0.973$^{*}$ & $-$0.981 & $-$0.555 & $-$0.043 \\ 
+  &  & (0.537) & (0.682) & (0.710) & (0.074) \\ 
   & & & & & \\ 
- log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.107 & $-$0.156 & $-$0.719$^{***}$ & $-$0.092$^{***}$ \\ 
-  &  & (0.099) & (0.152) & (0.161) & (0.020) \\ 
+ log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.366$^{***}$ & 0.273 & $-$0.578$^{***}$ & $-$0.064$^{***}$ \\ 
+  &  & (0.093) & (0.190) & (0.204) & (0.024) \\ 
   & & & & & \\ 
- log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.162 & 0.899$^{***}$ & 0.952$^{***}$ & 0.119$^{***}$ \\ 
-  &  & (0.204) & (0.300) & (0.320) & (0.039) \\ 
+ log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.365$^{*}$ & 1.012$^{***}$ & 1.266$^{***}$ & 0.156$^{***}$ \\ 
+  &  & (0.198) & (0.311) & (0.329) & (0.040) \\ 
   & & & & & \\ 
- same type &  &  &  & 1.490$^{***}$ & 0.215$^{***}$ \\ 
-  &  &  &  & (0.050) & (0.007) \\ 
+ same type &  &  &  & 1.583$^{***}$ & 0.228$^{***}$ \\ 
+  &  &  &  & (0.052) & (0.007) \\ 
   & & & & & \\ 
- Intercept & $-$1.584$^{***}$ & $-$1.731$^{***}$ & $-$1.665$^{***}$ & $-$2.522$^{***}$ & 0.066$^{***}$ \\ 
-  & (0.057) & (0.049) & (0.064) & (0.076) & (0.009) \\ 
+ Intercept & $-$1.176$^{***}$ & $-$2.066$^{***}$ & $-$1.819$^{***}$ & $-$2.750$^{***}$ & 0.037 \\ 
+  & (0.273) & (0.082) & (0.403) & (0.430) & (0.052) \\ 
   & & & & & \\ 
 \hline \\[-1.8ex] 
 Model & Logit & Logit & Logit & Logit & OLS \\ 
-Observations & 14,520 & 14,520 & 14,520 & 14,520 & 14,520 \\ 
-Akaike Inf. Crit. & 12,761.360 & 12,766.890 & 12,737.220 & 11,808.540 & 11,003.130 \\ 
+Observations & 13,806 & 13,806 & 13,806 & 13,806 & 13,806 \\ 
+Akaike Inf. Crit. & 12,057.300 & 12,031.870 & 12,030.990 & 11,064.940 & 10,239.880 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{5}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
