added import dataset for julia

--- a/figuretable/shipping_market_stats_table.tex
+++ b/figuretable/shipping_market_stats_table.tex
@@ -1,9 +1,10 @@
-%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(4, 5), rgroup = c("measure of economies of scale",         "measure of economies of scope"))%
+%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("measure of economies of scale",         "measure of economies of scope"))%
 \begin{tabular}{lrrrrrrrr}
 \toprule
 \multicolumn{1}{l}{\itshape }&\multicolumn{1}{r}{\itshape N}&\multicolumn{1}{r}{\itshape mean}&\multicolumn{1}{r}{\itshape sd}&\multicolumn{1}{r}{\itshape min}&\multicolumn{1}{r}{\itshape q25}&\multicolumn{1}{r}{\itshape q50}&\multicolumn{1}{r}{\itshape q75}&\multicolumn{1}{r}{\itshape max}\tabularnewline
 \midrule
 {\itshape measure of economies of scale}&&&&&&&&\tabularnewline
+~~total tonnage size&$118$&79810.958&139876.868&479.000&10716.000&24128.500&74874.000&700730\tabularnewline
 ~~total tonnage size of liner&$118$&22334.220&82068.002&0.000&0.000&0.000&0.000&526000\tabularnewline
 ~~total tonnage size of special&$118$&9541.415&19479.171&0.000&0.000&0.000&7204.500&98768\tabularnewline
 ~~total tonnage size of tanker&$118$&20973.136&44468.924&0.000&0.000&0.000&24776.500&250173\tabularnewline
