--- a/figuretable/regression_matching.tex
+++ b/figuretable/regression_matching.tex
@@ -7,49 +7,49 @@
 \\[-1.8ex] & \multicolumn{5}{c}{1(match)} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5)\\ 
 \hline \\[-1.8ex] 
- log(liner$_{b}$ *liner$_{t}$+1) & $-$0.002 &  & $-$0.014 & $-$0.031$^{***}$ & $-$0.004$^{***}$ \\ 
-  & (0.006) &  & (0.010) & (0.011) & (0.001) \\ 
+ log(liner$_{b}$ *liner$_{t}$+1) & $-$0.002 &  & $-$0.013 & $-$0.029$^{***}$ & $-$0.003$^{***}$ \\ 
+  & (0.006) &  & (0.009) & (0.010) & (0.001) \\ 
   & & & & & \\ 
- log(tramper$_{b}$ *tramper$_{t}$+1) & 0.005$^{*}$ &  & 0.002 & 0.017$^{***}$ & 0.002$^{***}$ \\ 
-  & (0.003) &  & (0.005) & (0.006) & (0.001) \\ 
+ log(tramper$_{b}$ *tramper$_{t}$+1) & 0.005$^{*}$ &  & 0.004 & 0.018$^{***}$ & 0.002$^{***}$ \\ 
+  & (0.002) &  & (0.005) & (0.006) & (0.001) \\ 
   & & & & & \\ 
- log(special$_{b}$ *special$_{t}$+1) & $-$0.009$^{**}$ &  & $-$0.003 & $-$0.016$^{**}$ & $-$0.002$^{***}$ \\ 
+ log(special$_{b}$ *special$_{t}$+1) & $-$0.009$^{**}$ &  & $-$0.002 & $-$0.017$^{***}$ & $-$0.002$^{***}$ \\ 
   & (0.004) &  & (0.006) & (0.006) & (0.001) \\ 
   & & & & & \\ 
- log(tanker$_{b}$ *tanker$_{t}$+1) & $-$0.001 &  & $-$0.016$^{**}$ & $-$0.023$^{***}$ & $-$0.003$^{***}$ \\ 
-  & (0.004) &  & (0.006) & (0.007) & (0.001) \\ 
+ log(tanker$_{b}$ *tanker$_{t}$+1) & $-$0.003 &  & $-$0.017$^{**}$ & $-$0.026$^{***}$ & $-$0.003$^{***}$ \\ 
+  & (0.004) &  & (0.007) & (0.007) & (0.001) \\ 
   & & & & & \\ 
- log(total$_{b}$ *total$_{t}$+1) & $-$0.026$^{*}$ &  & $-$0.007 & 0.026 & 0.003 \\ 
-  & (0.014) &  & (0.018) & (0.019) & (0.002) \\ 
+ log(total$_{b}$ *total$_{t}$+1) & $-$0.021 &  & $-$0.010 & 0.049$^{***}$ & 0.006$^{***}$ \\ 
+  & (0.013) &  & (0.017) & (0.018) & (0.002) \\ 
   & & & & & \\ 
- bank coverage similarity ratio &  & 1.687$^{***}$ & 2.141$^{***}$ & 0.912 & 0.119 \\ 
-  &  & (0.529) & (0.570) & (0.611) & (0.075) \\ 
+ bank coverage similarity ratio &  & 1.598$^{***}$ & 2.052$^{***}$ & 0.649 & 0.088 \\ 
+  &  & (0.525) & (0.575) & (0.617) & (0.076) \\ 
   & & & & & \\ 
- log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.543$^{***}$ & 0.371 & $-$0.244 & $-$0.035 \\ 
-  &  & (0.149) & (0.228) & (0.240) & (0.029) \\ 
+ log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.525$^{***}$ & 0.372$^{*}$ & $-$0.123 & $-$0.019 \\ 
+  &  & (0.148) & (0.221) & (0.231) & (0.028) \\ 
   & & & & & \\ 
- log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.304 & 1.144 & 2.111$^{***}$ & 0.256$^{***}$ \\ 
-  &  & (0.459) & (0.759) & (0.808) & (0.099) \\ 
+ log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.334 & 1.159 & 2.140$^{***}$ & 0.253$^{***}$ \\ 
+  &  & (0.473) & (0.739) & (0.788) & (0.096) \\ 
   & & & & & \\ 
- log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$0.973$^{*}$ & $-$0.981 & $-$0.555 & $-$0.043 \\ 
-  &  & (0.537) & (0.682) & (0.710) & (0.074) \\ 
+ log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$0.996$^{*}$ & $-$0.990 & $-$0.529 & $-$0.041 \\ 
+  &  & (0.519) & (0.667) & (0.694) & (0.072) \\ 
   & & & & & \\ 
- log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.366$^{***}$ & 0.273 & $-$0.578$^{***}$ & $-$0.064$^{***}$ \\ 
-  &  & (0.093) & (0.190) & (0.204) & (0.024) \\ 
+ log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.308$^{***}$ & 0.165 & $-$0.558$^{***}$ & $-$0.058$^{**}$ \\ 
+  &  & (0.091) & (0.188) & (0.200) & (0.024) \\ 
   & & & & & \\ 
- log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.365$^{*}$ & 1.012$^{***}$ & 1.266$^{***}$ & 0.156$^{***}$ \\ 
-  &  & (0.198) & (0.311) & (0.329) & (0.040) \\ 
+ log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.257 & 0.992$^{***}$ & 1.311$^{***}$ & 0.158$^{***}$ \\ 
+  &  & (0.210) & (0.335) & (0.354) & (0.043) \\ 
   & & & & & \\ 
- same type &  &  &  & 1.583$^{***}$ & 0.228$^{***}$ \\ 
+ same type &  &  &  & 1.600$^{***}$ & 0.229$^{***}$ \\ 
   &  &  &  & (0.052) & (0.007) \\ 
   & & & & & \\ 
- Intercept & $-$1.176$^{***}$ & $-$2.066$^{***}$ & $-$1.819$^{***}$ & $-$2.750$^{***}$ & 0.037 \\ 
-  & (0.273) & (0.082) & (0.403) & (0.430) & (0.052) \\ 
+ Intercept & $-$1.271$^{***}$ & $-$2.041$^{***}$ & $-$1.748$^{***}$ & $-$3.312$^{***}$ & $-$0.033 \\ 
+  & (0.260) & (0.083) & (0.395) & (0.425) & (0.051) \\ 
   & & & & & \\ 
 \hline \\[-1.8ex] 
 Model & Logit & Logit & Logit & Logit & OLS \\ 
 Observations & 13,806 & 13,806 & 13,806 & 13,806 & 13,806 \\ 
-Akaike Inf. Crit. & 12,057.300 & 12,031.870 & 12,030.990 & 11,064.940 & 10,239.880 \\ 
+Akaike Inf. Crit. & 12,056.510 & 12,037.120 & 12,034.740 & 11,053.080 & 10,230.180 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{5}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
