--- a/figuretable/shipping_market_stats_table.tex
+++ b/figuretable/shipping_market_stats_table.tex
@@ -4,17 +4,17 @@
 \multicolumn{1}{l}{\itshape }&\multicolumn{1}{r}{\itshape N}&\multicolumn{1}{r}{\itshape mean}&\multicolumn{1}{r}{\itshape sd}&\multicolumn{1}{r}{\itshape min}&\multicolumn{1}{r}{\itshape q25}&\multicolumn{1}{r}{\itshape q50}&\multicolumn{1}{r}{\itshape q75}&\multicolumn{1}{r}{\itshape max}\tabularnewline
 \midrule
 {\itshape measure of economies of scale}&&&&&&&&\tabularnewline
-~~total tonnage size&$118$&79810.958&139876.868&479.000&10716.000&24128.500&74874.000&700730\tabularnewline
-~~total tonnage size of liner&$118$&22334.220&82068.002&0.000&0.000&0.000&0.000&526000\tabularnewline
-~~total tonnage size of special&$118$&9541.415&19479.171&0.000&0.000&0.000&7204.500&98768\tabularnewline
-~~total tonnage size of tanker&$118$&20973.136&44468.924&0.000&0.000&0.000&24776.500&250173\tabularnewline
-~~total tonnage size of tramper&$118$&26962.186&38390.142&0.000&2283.250&11189.500&30933.750&166102\tabularnewline
+~~total tonnage size&$118$&109889.195&207066.440&479.000&11189.250&26461.000&90563.000&1022743\tabularnewline
+~~total tonnage size of liner&$118$&30656.051&112049.108&0.000&0.000&0.000&0.000&721218\tabularnewline
+~~total tonnage size of special&$118$&15080.932&33126.398&0.000&0.000&0.000&7586.000&176566\tabularnewline
+~~total tonnage size of tanker&$118$&29611.525&70524.066&0.000&0.000&0.000&24067.750&417241\tabularnewline
+~~total tonnage size of tramper&$118$&34540.686&55403.907&0.000&2283.250&12855.500&33663.750&245501\tabularnewline
 \midrule
 {\itshape measure of economies of scope}&&&&&&&&\tabularnewline
-~~share of liner&$118$&0.105&0.239&0.000&0.000&0.000&0.000&1\tabularnewline
-~~share of special&$118$&0.114&0.241&0.000&0.000&0.000&0.083&1\tabularnewline
-~~share of tanker&$118$&0.204&0.356&0.000&0.000&0.000&0.246&1\tabularnewline
-~~share of tramper&$118$&0.578&0.412&0.000&0.189&0.661&1.000&1\tabularnewline
-~~HHI based on carrier types&$118$&0.807&0.241&0.254&0.584&1.000&1.000&1\tabularnewline
+~~share of liner&$118$&0.104&0.235&0.000&0.000&0.000&0.000&1\tabularnewline
+~~share of special&$118$&0.117&0.244&0.000&0.000&0.000&0.088&1\tabularnewline
+~~share of tanker&$118$&0.192&0.351&0.000&0.000&0.000&0.208&1\tabularnewline
+~~share of tramper&$118$&0.587&0.417&0.000&0.135&0.705&1.000&1\tabularnewline
+~~HHI based on carrier types&$118$&0.815&0.241&0.258&0.584&1.000&1.000&1\tabularnewline
 \bottomrule
 \end{tabular}
